# recap_server

./: .gitignore  .gitmodules  BUILD.md  Dockerfile  LICENSES.md  README.md  darkspore_server.sln  darkspore_server.vcxproj  darkspore_server.vcxproj.filters  docker-compose.yml  docker_build.sh  docker_clear.sh  docker_run.sh  premake5.lua
darkspore_server/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  build_and_run.sh  darkspore_server.vcxproj  docker_build.sh  docker_build_and_run_server.sh  docker_run.sh  premake5.lua
darkspore_server/cmake/: get_findvcvars.cmake  version.h.in  version.rc.in  version_info.cmake
darkspore_server/cmake/patches/: RakNet-3.902.patch
darkspore_server/libs/boost_1_70_0/boost-build/boost/architecture/msvc-14.2/debug/threading-multi/: 32.obj.rsp  arm.obj.rsp  (+4 more)
darkspore_server/libs/boost_1_70_0/boost-build/boost/bin.v2/: project-cache.jam
darkspore_server/libs/boost_1_70_0/stage/lib/: libboost_date_time-vc142-mt-gd-x64-1_70.lib  libboost_date_time-vc142-mt-x64-1_70.lib
darkspore_server/libs/openssl-1.1.1b/lib/: libssl.lib
darkspore_server/libs/raknet-3.902-mod/: CMakeLists.txt
darkspore_server/libs/raknet-3.902-mod/Lib/DLL/: CMakeLists.txt  DLL_vc8.vcproj
darkspore_server/libs/raknet-3.902-mod/Lib/LibStatic/: CMakeLists.txt  LibStatic_vc8.vcproj
darkspore_server/libs/sol2/oldsol/sol/: proxy.hpp
darkspore_server/res/: com.resurrectioncapsule.server.desktop
darkspore_server/res/data/: assets_catalog.xml  creature_parts_templates.json
darkspore_server/res/data/level/tutorial/: Darkspore_Tutorial_cryos_1_v2.level.xml
darkspore_server/res/data/lua/: 0x02D831AE.lua  0x50AF0894.lua  0xE6FD3DEF.lua  Affix_EnemyHealthRegen.lua  Affix_EnemyIncreased_Speed.lua  Affix_EnemyPeriodicStun.lua  Affix_EnemyProjectiles_Slowed.lua  Affix_MeteorShower.lua  Affix_PlayerDamageReflect.lua  Affix_PlayerHealthDrain.lua  AuraUtils.lua  Condition_AllyDied.lua  Condition_AllyFireThorns.lua  Condition_Ally_Needs_Buff.lua  Condition_BossDead.lua  Condition_CitadelSpecialThree_Damage.lua  Condition_EnemyBurning.lua  Condition_Enemy_Needs_Debuff.lua  Condition_HasMana.lua  Condition_Has_Stacks.lua  Condition_IgnorePets.lua  Condition_LowAllyHealth.lua  Condition_Most_Isolated_Enemy.lua  Condition_MutationAgent_CanUse.lua  Condition_Nearest_Player.lua  Condition_Nomad_Pets_Melee.lua  Condition_PulsarPull.lua  Condition_Random_Chance.lua  Condition_ScaldronBasicDopplerFake_HasStrafed.lua  Condition_ScaldronBasicDoppler_CanUseClone.lua  Condition_ScaldronBoss_CanUse.lua  Condition_ScaldronBoss_CanUseMelee.lua  Condition_Shadow_Boss_Duplicate.lua  Condition_ShouldRepair.lua  Condition_Sprite_Heal.lua  Condition_ZelemBossBlink.lua  DNA_Follow.lua  GlobalDefinitions.lua  LootRules.lua  Objective_FinishLevelQuickly.lua  (+9 more)
darkspore_server/res/data/phase/: test.xml
darkspore_server/res/data/serverdata/lua/: 0x4C983F6A.lua  0xE5FF67D3.lua  Affix_Juggernaut.lua  Affix_PlayerBasicHeal.lua  Affix_PlayerBasicMana.lua  Affix_VoidZone.lua  Condition_AllyHasEnergyDamage.lua  Condition_AllyOfSameTypeDied.lua  Condition_Ally_Has_Debuff.lua  Condition_Ally_Nearby.lua  Condition_Between_Owner_And_Target.lua  Condition_Closest.lua  Condition_Distance.lua  Condition_DistanceFromOwner.lua  Condition_Dog_Distracted.lua  Condition_DroneTargeting.lua  Condition_EnemyEnergyVulnerable.lua  Condition_Farthest_With_Minimum_Distance.lua  Condition_Friend_Needs_Charging.lua  Condition_LowHealth.lua  Condition_ManaOverload.lua  Condition_Needs_Facing_And_Range.lua  Condition_Pet_Targeting.lua  Condition_Ready_To_Discharge.lua  Condition_RecentDamage.lua  Condition_Resurrect.lua  Condition_ShouldConsumeCorpse.lua  Condition_VerdanthBoss_CanSpawn.lua  Condition_Zelem_Mark.lua  StandardPreload.lua  condition_fire_pet_attack.lua  objective_DefeatAllMonsters.lua  objective_DestroyAllDestructables.lua  objective_HealthObelisks.lua  objective_HugeDamage.lua  objective_LootCrystals.lua  objective_Obelisks.lua  objective_StayAlive.lua
darkspore_server/res/data/www/static/assets/css/: dsbutton.css  dscheckbox.css  dsfonts.css  dsinput.css  dsmodal.css  dsreset.css  dstitlebar.css
darkspore_server/res/data/www/static/assets/js/: eawebkit-http.js  eawebkit-jquery.js  eawebkit-polyfills.js  eawebkit-shim.js  eawebkit.js  recapclient.js
darkspore_server/res/data/www/static/bootstrap/launcher/: index.html  style.css  wrapper.html
darkspore_server/res/data/www/static/web/sporelabsgame/announceen/: index.html  style.css
darkspore_server/res/data/www/static/web/sporelabsgame/register/: index.html  style.css
darkspore_server/res/static/assets/css/: dsinput.css
darkspore_server/res/static/bootstrap/launcher/: index.html  style.css
darkspore_server/res/static/web/sporelabsgame/announceen/: _index.html  style.css
darkspore_server/source/: databuffer.cpp  databuffer.h  installer.cpp  installer.h  main.cpp  main.h  version.h
darkspore_server/source/blaze/: functions.h  packet.cpp  packet.h  server.cpp  server.h  tdf.cpp  tdf.h
darkspore_server/source/blaze/component/: authcomponent.cpp  gamemanagercomponent.cpp  redirectorcomponent.cpp  utilcomponent.cpp
darkspore_server/source/game/: api.cpp  api.h  config.cpp  config.h  creature.cpp  instance.cpp  level.cpp  level.h  lua.cpp  lua.h  luafunctions.cpp  noun.cpp  noun.h  object.cpp  player.cpp  user.cpp  user.h
darkspore_server/source/http/: multipart.cpp  router.cpp  server.cpp  server.h  session.cpp
darkspore_server/source/qos/: server.cpp  server.h
darkspore_server/source/raknet/: server.cpp
darkspore_server/source/sporenet/: creature.cpp  creature.h  part.cpp  part.h  squad.cpp  squad.h  user.cpp  user.h
darkspore_server/source/utils/: functions.cpp  functions.h  json.cpp  log.cpp  net.h
darkspore_server/x64/Debug/darkspore_server.tlog/: CL.command.1.tlog  CL.write.1.tlog  darkspore_server.lastbuildstate
darkspore_server/x64/Release/darkspore_server.tlog/: CL.command.1.tlog  CL.write.1.tlog  darkspore_server.lastbuildstate  darkspore_server.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+54 files in other folders)
